[package]
name = "build-and-drustroy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.8.0"
form_urlencoded = "1.2.1"
serde_json = "1.0.133"
